--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
   <body>
     <button id="start">Start</button>
     <audio style="display: none" id="audio" src="" controls></audio>
+    <script type="module">
+      import dateFns from "https://cdn.jsdelivr.net/npm/date-fns@4.1.0/+esm";
+    </script>
     <script src="./main.js" type="module"></script>
   </body>
 </html>
